// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > renders a header component - auth 1`] = `
<div
  className="ui basic segment header-wrapper"
  role="banner"
>
  <div
    className="ui container"
  >
    <div
      className="header"
    >
      <div
        className="logo-nav-wrapper"
      >
        <div
          className="logo"
        >
          <div
            id="logo"
          />
        </div>
        <div
          id="navigation"
        />
      </div>
      <div
        className="tools-search-wrapper"
      >
        <div
          id="language-selector"
        />
        <div
          className="search"
        >
          <div
            id="searchwidget"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header > renders a header component 1`] = `
<div
  className="ui basic segment header-wrapper"
  role="banner"
>
  <div
    className="ui container"
  >
    <div
      className="header"
    >
      <div
        className="logo-nav-wrapper"
      >
        <div
          className="logo"
        >
          <div
            id="logo"
          />
        </div>
        <div
          id="navigation"
        />
      </div>
      <div
        className="tools-search-wrapper"
      >
        <div
          id="language-selector"
        />
        <div
          className="tools"
        >
          <div
            id="anontools"
          />
        </div>
        <div
          className="search"
        >
          <div
            id="searchwidget"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
